@@ -356,6 +356,15 @@ TOMCAT_USER="tomcat"
     was installed as a package, the OpenNMS package should be able to find it
     and configure itself to use the proper commands. We are known to work with
     any "1.0" version of RRDtool since 1.0.33.</para>
+
+    <note>
+      <para>OpenNMS can also use JRobin for storing and graphing of
+      time-series data, however it is always built with RRDtool support.
+      For the time being, you will still need to install RRDtool to build
+      OpenNMS or to install an OpenNMS RPM package, even if you plan on
+      using JRobin (see enhancement bug 1335).  You can read more about
+      JRobin in the release notes.</para>
+    </note>
   </section>
 
   <section>
@@ -378,7 +387,7 @@ TOMCAT_USER="tomcat"
     using a version of PostgreSQL prior to 7.4, the server error messages are
     required to be in English (the 'C' locale). In particular, the parameter
     <filename>lc_messages</filename> must be set to <filename>'C'</filename>.
-    This is set in <filename>postgresql.conf</filename> in he PostgreSQL data
+    This is set in <filename>postgresql.conf</filename> in the PostgreSQL data
     directory and it requires the database be restarted if you change the
     setting. See the section below on <filename>pg_hba.conf</filename> for
     details on the location of the <filename>data</filename> directory.</para>
@@ -509,25 +518,5 @@ host all all ::1 ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff trust</programlisting><
     <para>The startup script uses <filename>curl</filename> to connect to the
     OpenNMS daemon to check that the various components are up and running
     ("<filename>opennms status</filename>").</para>
-  </section>
-
-  <section>
-    <title>Optional Prerequisite Package:
-    <filename>metamail</filename></title>
-
-    <note>
-      <para>This is no longer needed starting with OpenNMS 1.1.4, as the Perl
-      mailing has been replaced with a Java mailer.</para>
-    </note>
-
-    <para>Since OpenNMS uses Perl to mail availability reports, with some
-    mailers it is necessary to add the <filename>metamail</filename>
-    application in order for the PDF files created by OpenNMS to be mailed
-    properly.</para>
-
-    <para>Like the Perl modules in the above section,
-    <filename>metamail</filename> can be found on the OpenNMS FTP site (which
-    includes and SRPM) if metamail is not directly available for your
-    distribution.</para>
   </section>
 </chapter>
