@@ -170,19 +170,19 @@
       make a backup of important information before attempting the
       upgrade.</para>
 
-      <para>For OpenNMS, you should do two things:</para>
+      <para>For OpenNMS, you should do a few things:</para>
 
       <orderedlist>
         <listitem>
           <para>Copy the contents of the
           <filename>$OPENNMS_HOME/etc</filename> directory to a safe location.
           Should an issue arise with any new files, you will want to be able
-          to recover your original</para>
+          to recover your original.</para>
         </listitem>
 
         <listitem>
           <para>Make a backup of the postgres database. Using the
-          <filename>pg_dumpall </filename>command you can dump the entire
+          <filename>pg_dumpall</filename> command you can dump the entire
           contents of the database to a file:</para>
 
           <para><programlisting><computeroutput># </computeroutput><command>pg_dumpall &gt; old_data</command></programlisting></para>
